force-app/main/default/objects/OpportunityLineItem/fields/Dates__c.field-meta.xml
<CustomField>
    <fullName>Dates__c</fullName>
    <description>Dates field to show Start Date &amp; End Date in the related list of Opportunity Page</description>
    <formula>TEXT( SBQQ__QuoteLine__r.SBQQ__StartDate__c ) &amp; &quot; - &quot; &amp; TEXT( SBQQ__QuoteLine__r.SBQQ__EndDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Start Date and End Date of the Product from Quote Line</inlineHelpText>
    <label>Dates</label>
    <type>Text</type>
</CustomField>