force-app/main/default/objects/OpportunityLineItem/fields/Invoice_Line_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_Item_Description__c</fullName>
    <description>Description of line item.</description>
    <label>Invoice Line Item Description</label>
    <length>150</length>
    <type>Text</type>
</CustomField>