force-app/main/default/objects/OpportunityLineItem/fields/IOM_Do_not_send_for_Billing__c.field-meta.xml
<CustomField>
    <fullName>IOM_Do_not_send_for_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if true ,Don&apos;t include the Line item for IOM Billing</description>
    <label>Do not send for Billing</label>
    <type>Checkbox</type>
</CustomField>