force-app/main/default/objects/OpportunityLineItem/fields/IOM_End_Date__c.field-meta.xml
<CustomField>
    <fullName>IOM_End_Date__c</fullName>
    <description>Product End Date</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>