force-app/main/default/objects/OpportunityLineItem/fields/IOM_OLI_Number__c.field-meta.xml
<CustomField>
    <fullName>IOM_OLI_Number__c</fullName>
    <description>CRM Opportunity Products  Number</description>
    <displayFormat>0LI-{00000}</displayFormat>
    <label>OLI Number</label>
    <type>AutoNumber</type>
</CustomField>