force-app/main/default/objects/OpportunityLineItem/fields/IOM_QLI_Number__c.field-meta.xml
<CustomField>
    <fullName>IOM_QLI_Number__c</fullName>
    <description>IOM QLI Auto Number (Unique Number to identify IOM Quote Line )</description>
    <label>IOM QLI Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>