force-app/main/default/objects/OpportunityLineItem/fields/IOM_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>IOM_Start_Date__c</fullName>
    <description>Product Start Date</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>