force-app/main/default/objects/OpportunityLineItem/fields/Tax_Item_Category__c.field-meta.xml
<CustomField>
    <fullName>Tax_Item_Category__c</fullName>
    <description>OneSource Tax Categorisation</description>
    <label>Tax Item Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>